--- a/2020-1/apunte/Cap.02.tex
+++ b/2020-1/apunte/Cap.02.tex
@@ -567,7 +567,7 @@ $$
 %\addcontentsline{toc}{subsection}{Ejercicios}
 	Simplificar las siguientes expresiones, sea $n \in \mathbb N$
 	\begin{multicols}{2}
-\begin{enumerate}[1)]
+\begin{enumerate}
 	\item $\dfrac{n!}{( n - 2 ) !}$, \qquad si $n \geq 2$.
 	
 	\item $ \dfrac{(n + 2)!}{( n - 2 ) !}$, \qquad si $n \geq 2$.
@@ -1006,12 +1006,12 @@ buscábamos.
 
 	
 	
-\begin{enumerate}[1)]
+\begin{enumerate}
 \item Desarrollar las fórmulas de $(1+x)^8$ y $(1-x)^8$.
 
 \item Calcular los coeficientes de:
 \begin{multicols}{2}
-\begin{enumerate}[a)]
+\begin{enumerate}
 	\item $x^5$ en $(1+x)^{11}$;
 	
 	\item $a^2b^8 $ en $(a+b)^{10}$;
@@ -1037,7 +1037,7 @@ donde $m,n$ y $r$ son enteros positivos y, $m\ge r$, y $n \ge r$.
 
 \section{Ejercicios}
 
-\begin{enumerate}[1)]
+\begin{enumerate}
 
 \item Una ficha del juego de dominó puede ser representada con el símbolo $[x|y]$,
 donde $x$ e $y$ son miembros del conjunto $\{0,1,2,3,4,5,6\}$. Los números $x$
@@ -1067,7 +1067,7 @@ $$
 
 \item Calcular el coeficiente de:
 \begin{multicols}{3}
-\begin{enumerate}[a)]
+\begin{enumerate}
 	\item $x^6$ en $(1+x)^{12}$;
 	
 	\item $a^3b^7$ en $(a+b)^{10}$;
@@ -1105,7 +1105,7 @@ $$
 
 \item  Sea $X$ un $n$-conjunto. Probar que
 
-\begin{enumerate}[a)]
+\begin{enumerate}
 	\item existe un conjunto de $\binom{n-1}{k-1}$ $k$-subconjuntos de
 $X$ tales que cada par de ellos tiene intersección no vacía.
 
