--- a/2020-1/apunte/Cap.06.tex
+++ b/2020-1/apunte/Cap.06.tex
@@ -261,7 +261,7 @@ con dos pesadas se gráfica en la Fig.\-\,\ref{f6.2}
 
 \subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
-\begin{enumerate}[1)]
+\begin{enumerate}
 	
 \item En la siguiente tabla $n_5(h)$ es el número de árboles con raíz no
 isomorfos que tienen $5$ vértices y altura $h$. (Dos árboles con
@@ -306,9 +306,9 @@ este número puede ser alcanzado.
 \begin{section}{Árboles expandidos y el problema MST} \label{6.2}
 Supongamos que $G=(V,E)$ es un grafo conexo y que $T$ es un
 subconjunto de $E$ tal que
-\begin{enumerate}[a)]
-\item cada vértice de $G$ pertenece a una arista en $T$;
-\item las aristas de $T$ forman un árbol.
+\begin{enumerate}[label=(\alph*)]
+\item  cada vértice de $G$ pertenece a una arista en $T$;
+\item  las aristas de $T$ forman un árbol.
 \end{enumerate}
 En esta caso decimos que $T$ es un {\em árbol expandido} para
 \index{árbol expandido} $G$. Por ejemplo, un árbol expandido para
@@ -637,7 +637,7 @@ alrededor de $n^2$ operaciones.
 %\begin{subsection}{Ejercicios} %(continuación)	
 \subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
-\begin{enumerate}[1)]
+\begin{enumerate}
 	\item Encontrar árboles expandidos para el cubo Fig. \ref{f5.12} y
 	para el grafo de Petersen.
 	\item Muestrar esquemáticamente todos los árboles expandidos del grafo
@@ -713,7 +713,7 @@ método ta\-bu\-lar mostrado más arriba.
 %\begin{enumerate}
 
 \section{Ejercicios}
-\begin{enumerate}[1)]
+\begin{enumerate}
 \item Sea $T$ un árbol con raíz $m$-ario con $n$ vértices, $l$ hojas e
 $i$ vértices internos. Probar que
 $$ n=mi+1$$
