--- a/2020-1/apunte/Cap.07.tex
+++ b/2020-1/apunte/Cap.07.tex
@@ -77,16 +77,16 @@ $$
 Existen cuatro características de la composición de permutaciones de gran importancia, y están listadas en el próximo teorema.
 
 \begin{teorema}\label{tA3} Las siguientes propiedades valen en el conjunto $S_n$ de todas las permutaciones de $\{1,2,3,...,n\}$.
-\begin{enumerate}[a)]
-\item Si $\pi$ y $\sigma$ pertenecen a $S_n$, entonces $\pi\sigma$ también.
-\item Para cualesquiera permutaciones $\pi$, $\sigma$, $\tau$ en $S_n$,
+\begin{enumerate}[label=(\alph*)]
+\item  Si $\pi$ y $\sigma$ pertenecen a $S_n$, entonces $\pi\sigma$ también.
+\item  Para cualesquiera permutaciones $\pi$, $\sigma$, $\tau$ en $S_n$,
 $$
 (\pi\sigma)\tau=\pi(\sigma\tau).$$
-\item La función identidad, denotada por $\operatorname{id}$ y definida por $\operatorname{id}(r) =r$ para todo $r$ en $\mathbb N_n$, es una permutación y para cualquier $\sigma$ en $S_n$,
+\item  La función identidad, denotada por $\operatorname{id}$ y definida por $\operatorname{id}(r) =r$ para todo $r$ en $\mathbb N_n$, es una permutación y para cualquier $\sigma$ en $S_n$,
 tenemos
 $$
 \operatorname{id}\sigma=\sigma\operatorname{id}=\sigma.$$
-\item Para toda permutación $\pi$ en $S_n$ hay una permutación inversa $\pi^{-1}$ en $S_n$ tal que
+\item  Para toda permutación $\pi$ en $S_n$ hay una permutación inversa $\pi^{-1}$ en $S_n$ tal que
 $$
 \pi\pi^{-1} = \pi^{-1}\pi = \operatorname{id}.
 $$
@@ -147,7 +147,7 @@ reaparecerán en sus posiciones originales. Otra forma de expresar el resultado 
 %\section{Ejercicios}
 \subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
-\begin{enumerate}[1)]
+\begin{enumerate}
 \item Escribir en notación cíclica la permutación que realiza el siguiente reordenamiento:
 $$
 \begin{matrix} 1&2&3&4&5&6&7&8&9 \\
