--- a/2020-1/apunte/Cap.08.tex
+++ b/2020-1/apunte/Cap.08.tex
@@ -107,7 +107,7 @@ n!\left(1-\frac{1}{1!} + \frac{1}{2!}-\cdots
 	
 \subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}\label{ejerciciosA1.2}
-\begin{enumerate}[1)]
+\begin{enumerate}
 \item En una clase de $67$ estudiantes de matemática, $47$ leen francés, $35$ leen alemán y $23$ leen ambos lenguajes ?`Cuántos estudiantes no lee
 ninguno de los dos lenguajes? Si además $20$ leen ruso, de los
 cuales $12$ también leen francés, $11$ leen alemán y $5$ leen los tres
