--- a/2020-1/apunte/Cap.09.tex
+++ b/2020-1/apunte/Cap.09.tex
@@ -145,7 +145,7 @@ Luego $\beta$ es biyectiva y $|S|=n$, como queríamos demostrar.
 %\begin{subsection}{Ejercicios}
 \subsection*{\Large $\S$ Ejercicios}
 %\addcontentsline{toc}{subsection}{Ejercicios}
-\begin{enumerate}[1)]
+\begin{enumerate}
 \item Encontrar los valores de $\phi(19),\quad \phi(20),\quad \phi(21)$.
 
 \item Probar que si $x$ y $n$ son coprimos, entonces lo son $n-x$ y
